--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -1,5 +1,5 @@
-<h1>hi</h1>
 <%= simple_form_for [list, bookmark] do |f| %>
   <%= f.input :comment %>
+  <%= f.association :movie %>
   <%= f.submit %>
 <% end %>
