--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,11 +1,5 @@
 <h1>NEW bookmark </h1>
-<p><%= @bookmark %>
-<%# <p>
-<%= simple_form_for [@list, @bookmark] do |f| %>
-  <%# <%= f.input :comment %> %>
-  <%# <%= f.submit "submit" %> %>
-<%# <% end %> %>
-<%# </p> %> %>
-<%# list id, movie id %>
+<p><%= @bookmark.comment %>
+
 
 <%= render "form", { list: @list, bookmark: @bookmark} %>
