--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,6 +1,7 @@
 <h1>List of lists</h1>
 <ul>
   <% @lists.each do |list| %>
-  <li><%= list.name %></li>
+  <li><%= link_to list.name, list_path(list) %></li>
   <% end %>
 </ul>
+<%= link_to "Add a list", new_list_path %>
