--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,14 +3,15 @@
   <% @list.movies.each do |movie| %>
   <li><%= movie.title %> -> <%= movie.rating %></li>
   <ul>
-    <% movie.bookmarks.each do |bookmark| %>
+    <% bookmark = Bookmark.find_by(movie: movie, list: @list) %>
+
     <li><%= bookmark.comment %><%= link_to "Delete",
   bookmark_path(bookmark),
   data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
 %></li>
-    <% end %>
   </ul>
   <% end %>
 </ol>
 <%= link_to "Back to lists", lists_path %>
 <%= link_to "Add a bookmark", new_list_bookmark_path(@list) %>
+<%# bookmark = Bookmark.find_by(movie_id: list_id) %>
