--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,14 +1,10 @@
 <h1><%= @list.name %></h1>
 <ol>
   <% @list.movies.each do |movie| %>
-  <li><%= movie.title %> -> <%= movie.rating %></li>
-  <ul>
     <% bookmark = Bookmark.find_by(movie: movie, list: @list) %>
-
-    <li><%= bookmark.comment %><%= link_to "Delete",
-  bookmark_path(bookmark),
-  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-%></li>
+    <li><%= movie.title %> -> <%= movie.rating %></li>
+  <ul>
+    <li><%= bookmark.comment %><%= link_to "Delete", bookmark_path(bookmark), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></li>
   </ul>
   <% end %>
 </ol>
