--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,5 +1,5 @@
-<h1>NEW bookmark </h1>
-<p><%= @bookmark.comment %>
-
-
-<%= render "form", { list: @list, bookmark: @bookmark} %>
+<div>
+  <h1>NEW bookmark </h1>
+  <p><%= @bookmark.comment %>
+  <%= render "form", { list: @list, bookmark: @bookmark} %>
+</div>
