--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
-    <%= yield %>
+  <div class="container">
+    <div class="row d-flex justify-content-center">
+      <div class="col-6">
+        <div class="d-flex justify-content-center">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
