--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,9 @@
-<h1>List of lists</h1>
-<ul>
-  <% @lists.each do |list| %>
-  <li><%= link_to list.name, list_path(list) %></li>
-  <% end %>
-</ul>
-<%= link_to "Add a list", new_list_path %>
+<div class="">
+  <h1>List of lists</h1>
+  <ul>
+    <% @lists.each do |list| %>
+    <li class="m-3"><%= link_to list.name, list_path(list), class: "text-decoration-none text-black" %></li>
+    <% end %>
+  </ul>
+  <%= link_to "Add a list", new_list_path, class: "text-decoration-none btn btn-primary" %>
+</div>
